welcome.lessons.welcome.variables.Variables.scala.code
if (estSurBiscuit=false){
	avancer();
}else{
	prendBiscuit();recule();
}
